# Video-Game-Ratings-Sales-and-Genre-Analysis

./: Makefile  README.md  environment.yml  pyproject.toml
Video Game Ratings Sales and Genre Analysis/: __init__.py  dataset.py  features.py  plots.py
Video Game Ratings Sales and Genre Analysis/modeling/: predict.py  train.py
data/processed/: Cleaned_Video_Games_Sales_as_at_22_Dec_2016.csv
notebooks/: Sprint_2_Cleaning.ipynb  Sprint_2_EDA.ipynb  Sprint_3_Code.ipynb
